Edit header width to avoid horizontal scroll bar

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,6 @@ code {
 
 .header {
   background: white;
-  width: 100%;
   display: flex;
   flex-flow: row wrap;
   align-items: center;
